svg object fit to section mobile fixed

--- a/src/styles/3-layout/_siteContent.scss
+++ b/src/styles/3-layout/_siteContent.scss
@@ -170,10 +170,28 @@ section.page-section:last-of-type {
 section.slider{
   box-shadow: inset 0 -7px 0 v.$clr-primary, 0 -7px 9px rgba(0 0 0 /.4);
   min-height: 95vh;
-  //noinspection CssUnknownTarget
-  //background-image: linear-gradient(245deg, v.$clr-third 0%, v.$clr-bg 80%), url(data-url:../media/Background-fluid-lines-anim.svg);
-  background-size: cover;
   background: var(--clr-slider) no-repeat 0 0;
+}
+
+#home {
+  position: relative;
+  /*&:before {
+    //can't color
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .1;
+    z-index: -1;
+    //noinspection CssUnknownTarget
+    background-image: linear-gradient(245deg, v.$clr-third 0%, v.$clr-bg 80%), url(data-url:../media/Background-fluid-lines.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: cover;
+  }*/
 }
 
 /*.background-wrapper {
@@ -189,24 +207,18 @@ section.slider{
   top: 0;
   bottom: 0;
   min-width: 100vw;
-  //TODO fit to parent (try background integration)
-  min-height: 200vh;
+  width: auto;
+  min-height: 100%;
+  max-height: 100%;
   object-fit: cover;
   object-position: top;
   z-index: -1;
   opacity: .3;
 }
 
-@media screen and (min-width: v.$bpTablet),
-screen and (max-height: 500px) and (min-width: v.$bpMobile) {
+@media screen and (min-width: 1500px) {
   #background-anim{
-    position: absolute;
-    left: 0;
-    top: 0;
-    min-width: 100vw;
-    width: auto;
-    min-height: 100%;
-    bottom: 0;
+    max-height: unset;
   }
 }
 
@@ -225,7 +237,6 @@ screen and (max-height: 500px) and (min-width: v.$bpMobile) {
 @media screen and (min-width: v.$bpTablet),
 screen and (max-height: 500px) and (min-width: v.$bpMobile) {
   #home {
-    position: relative;
     min-height: clamp(720px, 100vh, 2000px);
   }
   .home__content {
@@ -323,7 +334,7 @@ screen and (max-height: 500px) and (min-width: v.$bpMobile) {
 
 @media screen and (min-width: v.$bpWideS) {
   #portfolio {
-    transform: translateY(-5rem);
+    margin-top: 2rem;
   }
 }
 
